# Meraki

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  documentação.md  package-lock.json  package.json  setup-client.ps1  setup-dependencies.ps1  start-all.ps1  start-with-docker.ps1
programs/meraki_contract/: Cargo.toml
programs/meraki_contract/src/: lib.rs
src/server/meraki_api_server/: .env.example  Cargo.toml  docker-compose.yml
src/server/meraki_api_server/.sqlx/: query-02d214363af6e7cc9a396d1534817400c381bbe9f3d487799070b96c768b2192.json  query-11598b2f5ede7f65d0150b2fe11336eb665acf1638c548270f2515db32fc9623.json  query-834bc82d3e4c53c67546e487ac28fdd3cf1d43d7d1dea4f17496060411c610bf.json  query-ce433fc4ffae1aa8e2ceaa29f57e482d38b7e9310e0d32adb4b173013fd1f25c.json  query-eaeede060023202c629f30d92c1a24232e3289972633d94a2ff49d987b1f97b4.json  query-ed730489a33d498ca43435ac8084a897b34d6627c2ad18ac7fdbc44bc148b7a5.json  query-eddf4480ea0006f1be460abbfc6367ed59367f8d8522228ba867dcb083e759c4.json
src/server/meraki_api_server/.sqlx1/: query-0a5c2d1e05675e91b9906e9cfc5483b75658b79ce7805bd6ae423d09d2368795.json  query-0b564e7ab8deac9442ecdc78795d8f48d10223795d6f3fdf37ed43ed842fdc0f.json  query-147eaee6d2b684edd585b9f21c604ea59b1901b58ae07790b58878348b17b342.json  query-484a0bc45a0019d332c64496ec1bee6d60ab1b62a7f7f3db7828cc56cd1e00c5.json  query-5ac561df295fd7ea8f7751e104c42f3a9651e68fd7ef43d126a5b2e4274eb366.json  query-6edc18420484311289d84d92fe52e42826ed339adf2cdd8512d3b25489365066.json  query-c3e6ce95e80af293cc1052e5ad73de8ad08d5f9ef68ba10baa5cdfa7d437724e.json  query-cb1b96be72c9ad9b1dadf1d768f3aa576d7ee5b8a4a697153b99760e777f4ffc.json  query-eccdaceb13e5f4a61ebc073359d7205d7f1813a60b363ae7b04c3b080d1c1ae9.json  query-f2e333d4dd10e0cb8fdbfbfaa734ff8bef1e0bd1a08dfd1d6399ca8385d2bca2.json  (+1 more)
(+162 files in other folders)
