[package]
name = "meraki_contract"
version = "0.1.0"
edition = "2021"
description = "Smart contract de investimento Meraki (Solana + Anchor)"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "meraki_contract"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
"no-entrypoint" = []
"no-idl" = []
"cpi" = []
"custom-heap" = []
"custom-panic" = []
"anchor-debug" = []
"no-log-ix-name" = []

# ⚠ remove completamente o [profile.release] daqui!