[package]
name = "meraki_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time", "uuid", "bigdecimal", "macros"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1.0"
jsonwebtoken = "9"
bigdecimal = { version = "0.3", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }

# --- Swagger ---
# Utoipa provides OpenAPI generation; utoipa-swagger-ui serves the Swagger UI.
utoipa = { version = "4", features = ["axum_extras", "time", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# --- Data Types ---
# Used for Postgres `timestamptz`
time = { version = "0.3", features = ["serde", "macros"] } 
# Used for Postgres `uuid`
uuid = { version = "1", features = ["v4", "serde"] }

# --- Security (Password Hashing) ---
# Argon2 library for hashing passwords
argon2 = { version = "0.5" }
# Required to generate a random salt for argon2
rand_core = { version = "0.6", features = ["std"] }
